--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile group:'com.squareup.picasso', name:'picasso', version:'2.5.0'
     testCompile 'junit:junit:4.12'
 }
