--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/dragon_fruit"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CarouselOne">
+        <activity android:name=".RecipeSearch">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,10 +19,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+
         <activity android:name=".CarouselTwo" />
-        <activity android:name=".RecipeSearch" />
+        <activity android:name=".MyActivity" />
         <activity android:name=".IntroScreen" />
-        <activity android:name=".DetailActivity"></activity>
+
     </application>
 
 </manifest>
