--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecipeSearch">
+        <activity android:name=".CarouselOne">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".RecipeSearch" />
         <activity android:name=".MainActivity" />
-
+        <activity android:name=".DetailActivity" />
         <activity android:name=".CarouselTwo" />
         <activity android:name=".MyActivity" />
         <activity android:name=".IntroScreen" />
